--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,8 +3,8 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/id_nav_menu_1"
-            android:title="Menu 1" />
+            android:id="@+id/id_nav_menu_races_today"
+            android:title="Races Today" />
         <item
             android:id="@+id/id_nav_menu_2"
             android:title="Menu 2" />
