--- a/app/src/main/res/layout/content_view_activity_main.xml
+++ b/app/src/main/res/layout/content_view_activity_main.xml
@@ -11,7 +11,7 @@
     <include
         layout="@layout/app_bar_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
