--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/id_menu_preferences"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/menu_item_preferences"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/id_menu_delete"
+        android:orderInCategory="101"
+        android:title="@string/menu_item_delete"
         app:showAsAction="never" />
 </menu>
