--- a/app/src/main/res/layout/race_row.xml
+++ b/app/src/main/res/layout/race_row.xml
@@ -6,23 +6,50 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <!--<TextView-->
-        <!--android:id="@+id/tv_id_meeting_code"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--android:textAppearance="@android:style/TextAppearance.Material.Medium"/>-->
+    <TextView
+        android:id="@+id/tv_id_race_no"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="R"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!--<TextView-->
-        <!--android:id="@+id/tv_id_venue_name"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--android:layout_marginLeft="64dp"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--android:textAppearance="@android:style/TextAppearance.Material.Medium"/>-->
+    <TextView
+        android:id="@+id/tv_id_race_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_id_race_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="8dp"
+        android:text="15:59"
+        android:textAppearance="@android:style/TextAppearance.Material.Small"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_id_race_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_id_race_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
+
+    <TextView
+        android:id="@+id/tv_id_race_dist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="11800m"
+        android:textAppearance="@android:style/TextAppearance.Material.Small"
+        app:layout_constraintLeft_toRightOf="@+id/tv_id_race_time"
+        app:layout_constraintTop_toBottomOf="@+id/tv_id_race_name" />
+
 </android.support.constraint.ConstraintLayout>
