--- a/app/src/main/res/layout/meeting_row.xml
+++ b/app/src/main/res/layout/meeting_row.xml
@@ -14,7 +14,9 @@
         android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
     <TextView
         android:id="@+id/tv_id_venue_name"
@@ -24,5 +26,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="64dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 </android.support.constraint.ConstraintLayout>
