--- a/app/src/main/res/layout/content_races.xml
+++ b/app/src/main/res/layout/content_races.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/id_content_races"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <!--<include layout="@layout/appbar_toolbar_layout" />-->
-</FrameLayout>
+    android:layout_height="match_parent"
+    android:paddingTop="?actionBarSize" />
