--- a/app/src/main/res/layout/content_view_main.xml
+++ b/app/src/main/res/layout/content_view_main.xml
@@ -8,7 +8,7 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include layout="@layout/app_bar_main" />
+    <include layout="@layout/app_bar" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -18,5 +18,7 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
+
+    <include layout="@layout/content_main" />
 
 </android.support.v4.widget.DrawerLayout>
