--- a/app/src/main/res/layout/content_view_races.xml
+++ b/app/src/main/res/layout/content_view_races.xml
@@ -2,8 +2,13 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/id_content_main"
+    android:id="@+id/id_races_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="?actionBarSize" />
+    android:layout_height="match_parent">
+
+    <include layout="@layout/app_bar" />
+
+    <include layout="@layout/content_races" />
+
+</android.support.design.widget.CoordinatorLayout>
 
