--- a/app/src/main/res/layout/content_view_main.xml
+++ b/app/src/main/res/layout/content_view_main.xml
@@ -2,7 +2,7 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/id_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -10,15 +10,16 @@
 
     <include layout="@layout/app_bar" />
 
+    <include layout="@layout/content_main" />
+
+    <!-- Note: this must be last to be able to select a menu item. -->
     <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/id_nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_main"
+        app:headerLayout="@layout/nav_drawer_header"
         app:menu="@menu/activity_main_drawer" />
-
-    <include layout="@layout/content_main" />
 
 </android.support.v4.widget.DrawerLayout>
