--- a/app/src/main/res/layout/content_view_main.xml
+++ b/app/src/main/res/layout/content_view_main.xml
@@ -8,7 +8,7 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include layout="@layout/app_bar" />
+    <include layout="@layout/meetings_toolbar" />
 
     <include layout="@layout/content_main" />
 
