--- a/app/src/main/res/layout/meetings_toolbar.xml
+++ b/app/src/main/res/layout/meetings_toolbar.xml
@@ -17,7 +17,7 @@
             <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/app_bar_base_toolbar"
+                android:id="@+id/id_meetings_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
@@ -25,10 +25,10 @@
                 app:layout_collapseMode="pin">
 
                 <TextView
-                    android:id="@+id/toolbar_title"
+                    android:id="@+id/id_tv_meetings_toolbar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Toolbar Title"
+                    android:text="Meetings Toolbar"
                     android:textColor="@android:color/white"
                     style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                     android:layout_gravity="center" />
