Card view for Meetings (has blank/phantom row issue).

--- a/app/src/main/res/layout/content_view_races.xml
+++ b/app/src/main/res/layout/content_view_races.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/races_toolbar" />
+    <!--<include layout="@layout/races_toolbar" />-->
+    <include layout="@layout/toolbar" />
 
     <include layout="@layout/content_races" />
 
