--- a/app/src/main/res/layout/content_view_main.xml
+++ b/app/src/main/res/layout/content_view_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/id_drawer_layout"
@@ -8,8 +9,9 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include layout="@layout/meetings_toolbar" />
+    <include layout="@layout/toolbar" />
 
+    <!-- Fragment container. -->
     <include layout="@layout/content_main" />
 
     <!-- Note: this must be last to be able to select a menu item. -->
@@ -20,6 +22,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_drawer_header"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/nav_drawer_menu" />
 
 </android.support.v4.widget.DrawerLayout>
