Changes for Races (add custom toolbar). Padding issue persists.

--- a/app/src/main/res/layout/content_view_meetings.xml
+++ b/app/src/main/res/layout/content_view_meetings.xml
@@ -12,7 +12,7 @@
     <include layout="@layout/toolbar" />
 
     <!-- Fragment container. -->
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_common" />
 
     <!-- Note: this must be last to be able to select a menu item. -->
     <android.support.design.widget.NavigationView
