--- a/app/src/main/res/layout/content_common.xml
+++ b/app/src/main/res/layout/content_common.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<android.support.design.widget.CoordinatorLayout-->
-<FrameLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/id_container"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="?actionBarSize" />
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:paddingTop="?actionBarSize">
+</android.support.design.widget.CoordinatorLayout>
 
