--- a/app/src/main/res/layout/meeting_row.xml
+++ b/app/src/main/res/layout/meeting_row.xml
@@ -2,11 +2,14 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/id_cv_meeting_row"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="4dp"
     card_view:cardCornerRadius="4dp">
+    <!--card_view:cardElevation="0dp"-->
+    <!--card_view:cardBackgroundColor="@android:color/transparent" >-->
 
     <android.support.constraint.ConstraintLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
