Updates for races card view (display issue persists).

--- a/app/src/main/res/layout/content_view_races.xml
+++ b/app/src/main/res/layout/content_view_races.xml
@@ -9,6 +9,7 @@
 
     <include layout="@layout/toolbar" />
 
+    <!-- Fragment container. -->
     <include layout="@layout/content_common"/>
 
 </android.support.design.widget.CoordinatorLayout>
