--- a/app/src/main/res/layout/fragment_common.xml
+++ b/app/src/main/res/layout/fragment_common.xml
@@ -7,11 +7,9 @@
     android:fitsSystemWindows="true">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/id_rv_races_summary_listing"
+        android:id="@+id/id_rv_listing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-    <include layout="@layout/race_row" />
 
 </android.support.design.widget.CoordinatorLayout>
