--- a/app/src/main/res/layout/fragment_meetings.xml
+++ b/app/src/main/res/layout/fragment_meetings.xml
@@ -2,19 +2,14 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/id_races_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <include layout="@layout/toolbar" />
-
-    <!-- Fragment container. -->
-    <FrameLayout
-        android:id="@+id/id_races_container"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/id_rv_meetings_listing"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="?actionBarSize" />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
-
