--- a/app/src/main/res/layout/fragment_races.xml
+++ b/app/src/main/res/layout/fragment_races.xml
@@ -7,7 +7,7 @@
     android:fitsSystemWindows="true">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/id_rv_listing"
+        android:id="@+id/id_rv_races_listing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
