--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="rb_delete_all">0x10</integer>
     <integer name="rb_delete_prev">0x20</integer>
+    <integer name="init_default">-1</integer>
 </resources>
