--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -29,18 +29,20 @@
                         android:layout_marginTop="8dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_marginBottom="8dp"/>
+
                     <TextView
                         android:id="@+id/id_tv_toolbar"
+                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:layout_marginLeft="16dp"
                         android:layout_marginTop="8dp"
+                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                         android:textColor="@android:color/white"
-                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                        app:layout_constraintLeft_toRightOf="@+id/id_iv_toolbar"
-                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:layout_marginBottom="8dp" />
+                        app:layout_constraintLeft_toRightOf="@+id/id_iv_toolbar"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.Toolbar>
