--- a/app/src/main/res/layout/meeting_row.xml
+++ b/app/src/main/res/layout/meeting_row.xml
@@ -46,11 +46,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:textAppearance="@android:style/TextAppearance.Material.Small"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.571"
+            app:layout_constraintRight_toLeftOf="@+id/iv_meeting_expand"
+            android:layout_marginRight="16dp" />
+
+        <ImageView
+            android:id="@+id/iv_meeting_expand"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            card_view:srcCompat="@drawable/ic_arrow_down" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
