--- a/app/src/main/res/layout/meeting_row_expanded.xml
+++ b/app/src/main/res/layout/meeting_row_expanded.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/id_cv_meeting_row"
+    android:id="@+id/id_cv_meeting_row_expanded"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -30,6 +30,19 @@
             android:layout_marginBottom="8dp" />
 
         <TextView
+            android:id="@+id/id_tv_weather"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Weather:"
+            android:textAppearance="@android:style/TextAppearance.Material.Small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_id_meeting_code" />
+
+        <TextView
             android:id="@+id/tv_id_venue_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,11 +64,11 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.571"
-            app:layout_constraintRight_toLeftOf="@+id/iv_meeting_collapsed"
+            app:layout_constraintRight_toLeftOf="@+id/iv_meeting_expanded"
             android:layout_marginRight="16dp" />
 
         <ImageView
-            android:id="@+id/iv_meeting_collapsed"
+            android:id="@+id/iv_meeting_expanded"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -64,6 +77,36 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            card_view:srcCompat="@drawable/ic_arrow_down" />
+            card_view:srcCompat="@drawable/ic_arrow_up" />
+
+        <TextView
+            android:id="@+id/id_tv_weather_val"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/id_tv_weather" />
+
+        <TextView
+            android:id="@+id/id_tv_track"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="128dp"
+            android:text="Track:"
+            android:textAppearance="@android:style/TextAppearance.Material.Small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <TextView
+            android:id="@+id/id_tv_track_val"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:textAppearance="@android:style/TextAppearance.Material.Small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/id_tv_track" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
