--- a/app/src/main/res/layout/meeting_row.xml
+++ b/app/src/main/res/layout/meeting_row.xml
@@ -51,11 +51,11 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.571"
-            app:layout_constraintRight_toLeftOf="@+id/iv_meeting_collapsed"
+            app:layout_constraintRight_toLeftOf="@+id/iv_meeting_expand_collapse"
             android:layout_marginRight="16dp" />
 
         <ImageView
-            android:id="@+id/iv_meeting_collapsed"
+            android:id="@+id/iv_meeting_expand_collapse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -63,7 +63,6 @@
             android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            card_view:srcCompat="@drawable/ic_arrow_down" />
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
